set up socket communication

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -17,8 +17,9 @@
       <div id="chat-window">
         <div id="output"></div>
       </div>
-      <input id="handle" type="text" placeholder="Handle" />
+      <input id="user" type="text" placeholder="User" />
       <input id="message" type="text" placeholder="Message" />
+      <input id="sentiment" type="text" placeholder="Bull/Bear" />
       <button id="send">Send</button>
     </div>
     <script src="/chat.js"></script>
